--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "node dist/run.js"
   },
   "dependencies": {
-    "axios": "^1.0.0",
+    "axios": "^1.5.0",
+    "dotenv": "^16.4.5",
     "ndjson": "^2.0.0",
-    "simple-git": "^3.27.0",
-    "perf_hooks": "^1.0.0"
+    "simple-git": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
