--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.5.0",
     "dotenv": "^16.4.5",
     "ndjson": "^2.0.0",
-    "simple-git": "^3.19.1"
+    "simple-git": "^3.19.1",
+    "@octokit/core": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
