no more visible errors on the test.ts file, modified the way tests were being called from run.ts slightly. Changed the way winston was being imported b/c it was causing errors. I need to add better test functionality to each metric and whatnot, but the testing skeleton is operational and currently runs through mocha and chai. Mocha and chai needed to be added to the dependencies installed through ./run install, so I updated teh json files.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.19",
+    "@types/mocha": "^10.0.8",
     "@types/node": "^18.0.0",
+    "@types/sinon": "^17.0.3",
+    "chai": "^4.4.1",
+    "minimatch": "^3.0.5",
+    "mocha": "^10.7.3",
+    "nanoid": "^3.1.31",
+    "sinon": "^19.0.2",
     "typescript": "^5.0.0"
   }
 }
