--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "marked": "^14.1.2",
     "ndjson": "^2.0.0",
+    "node-fetch": "^2.6.9",
     "simple-git": "^3.19.1",
     "winston": "^3.8.2"
   },
@@ -22,6 +23,7 @@
     "@types/mocha": "^10.0.8",
     "@types/node": "^18.0.0",
     "@types/sinon": "^17.0.3",
+    "@types/node-fetch": "^2.6.4",
     "chai": "^4.4.1",
     "minimatch": "^3.0.5",
     "mocha": "^10.7.3",
