--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@octokit/core": "^5.2.0",
     "axios": "^1.5.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "marked": "^14.1.2",
     "ndjson": "^2.0.0",
     "node-fetch": "^2.6.9",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.19",
+    "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.9",
     "@types/node": "^18.0.0",
     "@types/node-fetch": "^2.6.4",
