disable workflow temp

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   test:
+    # disable workflow for now.
     runs-on: ubuntu-latest
+    if: false  
 
     steps:
       - name: Checkout code
