--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "marked": "^14.1.2",
+    "multer": "^1.4.5-lts.1",
     "ndjson": "^2.0.0",
     "node-fetch": "^2.6.9",
     "simple-git": "^3.19.1",
@@ -23,6 +24,7 @@
     "@types/chai": "^4.3.19",
     "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^18.0.0",
     "@types/node-fetch": "^2.6.4",
     "@types/sinon": "^17.0.3",
