--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Deploy to AWS
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AKIAYMWVFL7R6HRB6ZWL }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.5ko9BrRwyMWHLIwqxEASq4MdS/iA/H9Ee31B1o9p }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY}}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET}}
           AWS_REGION: ${{ secrets.us-east-1 }}
         run: |
           aws lambda update-function-code \
