--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY}}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET}}
-          AWS_REGION: ${{ secrets.us-east-1 }}
+          AWS_REGION: ${{ secrets.AWS_REGION}}
         run: |
           aws lambda update-function-code \
             --function-name ingestPackageFunction \
