--- a/.nycrc
+++ b/.nycrc
@@ -5,7 +5,7 @@
   "branches": 80,
   "statements": 80,
   "include": ["src/**/*.ts"],
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts", "src/tests/**/*", "src/frontend/**/*"],
   "reporter": ["text", "html"], 
   "report-dir": "./coverage"
 }
