--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run:  npx nyc mocha -r ts-node/register 'src/**/*.ts'  --ignore 'src/tests/CURLtests.ts' --ignore 'src/tests/packageTests.ts'  --exit
+        run:  npx nyc mocha -r ts-node/register 'src/**/*.ts'  --ignore 'src/tests/CURLtests.ts' --ignore 'src/tests/packageTests.ts' --ignore 'src/frontend/**/*' --exit
         env:  # Specify environment variables if needed
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           LOG_FILE: /tmp/log
