--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
       "module": "commonjs",
       "strict": true,
       "esModuleInterop": true,
-      "outDir": "./dist"
+      "outDir": "./dist",
+      "moduleResolution": "node16"
     },
     "include": ["src/**/*.ts", "tests/**/*"],
     "exclude": ["node_modules"]
