--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@octokit/core": "^5.2.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "marked": "^14.1.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.19",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.9",
     "@types/multer": "^1.4.12",
