--- a/.github/workflows/pushtoec2.yml
+++ b/.github/workflows/pushtoec2.yml
@@ -30,11 +30,16 @@ jobs:
           # Add EC2 host to known_hosts
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-          # Transfer files to the EC2 instance
-          scp -i private_key.pem -r . ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/app/
+          # Create a temporary directory to package files for transfer
+          tar -czf app.tar.gz *
 
-          # Connect to EC2 and run the docker-compose command
+          # Transfer files to the EC2 instance
+          scp -i private_key.pem app.tar.gz ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/app.tar.gz
+
+          # Connect to EC2 and deploy using docker-compose
           ssh -i private_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
-          cd /home/${{ secrets.EC2_USER }}/app
+          cd /home/${{ secrets.EC2_USER }}
+          tar -xzf app.tar.gz -C /home/${{ secrets.EC2_USER }}/app || mkdir -p /home/${{ secrets.EC2_USER }}/app && tar -xzf app.tar.gz -C /home/${{ secrets.EC2_USER }}/app
+          cd app
           docker-compose -f docker-compose.yml up -d --build
           EOF
