--- a/.github/workflows/pushtoec2.yml
+++ b/.github/workflows/pushtoec2.yml
@@ -41,6 +41,6 @@ jobs:
           cd /home/${{ secrets.EC2_USER }}
           tar -xzf app.tar.gz -C /home/${{ secrets.EC2_USER }}/app || mkdir -p /home/${{ secrets.EC2_USER }}/app && tar -xzf app.tar.gz -C /home/${{ secrets.EC2_USER }}/app
           cd app
-          docker-compose down
+          docker ps -aq | xargs -r docker rm -f
           docker-compose -f docker-compose.yml up -d --build
           EOF
